# advent-of-code-2021

./: .gitignore  notes.org  parse.sh  parse_watch.sh  show_used.sh
day01/cl/: day1.asd
day03/: grammar.lark
day03/prolog/: main.pl
day04/: grammar.lark
day04/py/: day4.py
day06/asm/: makefile  part1.s
day06/c/: part1.c
day1/: grammar.lark
day1/cl/: README.md  main.lisp  saulrh-advent-of-code-2021-lisp-test.asd  saulrh-advent-of-code-2021-lisp.asd  source.lisp
day11/nim/: .gitignore  config.nims  octopi.nim  part1.nim  point.nim
day12/: grammar.lark
day12/typescript/: index.ts  package.json  tsconfig.json
day13/: grammar.lark
day13/octave/: do_folds.m  fold.m  main.m  read_problem.m  render.m  translate_axis.m
day14/: grammar.lark
day14/perl/: main.pl  main2.pl
day15/sql/: ans.sql  attempts.txt  display.py  do.sh  load.sql  part1_1.sql  part1_2.sql  part1_3.sql  part2.sql
day16/rust/: Cargo.toml
day17/: hit-velocities.txt
day17/clojure/: deps.edn
day18/: additions.txt  example1.txt  example2.txt  example3.txt  example4.txt  magnitudes.txt  single-explodes.txt  single-splits.txt
day18/lua/: day18.lua
day19/py/: pyproject.toml
day19/py/alignments/: example_1.csv  input.csv
day19/py/day19/: main.py
day2/: grammar.lark
day2/ocaml/: dune  part1.ml  part2.ml
day20/py/: pyproject.toml
day20/py/day20/: main.py
day20/r/: main.R  run.sh
day21/cpp/: WORKSPACE
day22/ruby/: part1.rb  part2.rb  part2_test.rb
day23/py/: pyproject.toml
day23/py/day23/: part1.py  part2.py
day24/: input-min.txt  input_part11.txt  input_part12.txt  input_part13.txt  input_part3.txt  input_part4.txt  input_part5.txt  input_part7.txt  input_part8.txt  input_part9.txt
day24/rust/: Cargo.toml
day25/c/: .gitignore  day25.c  makefile
day3/py/: day3.py
day4/py/: day4.py
day5/zig/: build.zig
day6/asm/: .gitignore
day6/c/: makefile
day7/julia/: part1.jl
day8/py/: pyproject.toml  setup.cfg
day8/py/day8/: main.py  second_attempt.py
(+31 files in other folders)
