[tool.poetry]
name = "day19"
version = "0.1.0"
description = ""
authors = ["Saul Reynolds-Haertle <sreynoldshaertle@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
numpy = "^1.21.4"
more-itertools = "^8.12.0"
rich = "^10.16.1"

[tool.poetry.dev-dependencies]

[tool.pyright]
include = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "day19.main:main"