[tool.poetry]
name = "day20"
version = "0.1.0"
description = ""
authors = ["Saul Reynolds-Haertle <sreynoldshaertle@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
rich = "^10.16.1"
black = "^21.12b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]

[tool.poetry.scripts]
main = "day20.main:main"