[tool.poetry]
name = "day8"
version = "0.1.0"
description = ""
authors = ["Saul Reynolds-Haertle <sreynoldshaertle@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
rich = "^10.15.2"
pytype = "^2021.11.29"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "day8.main:main"
main2 = "day8.second_attempt:main"
